2007-04-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* BUILD: revamped
	* DEPENDS: revamped
	* DETAILS: update to 1.0.1
	* INSTALL: removed
	* PREPARE: removed
	* WIP: removed
	* crystalspace.sh: removed
	* cs-pseudo-stable-2005-09-03.tar.bz2.sig: removed
	* cs-pseudo-stable-2006-01-27.tar.bz2.sig: removed

2006-10-26 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
	* INSTALL: use TRACK_ROOT when linking #9163

2006-09-21 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: [automated] Removed BUILD_API=2.

2006-04-10 David C. Haley <dhaley@hot.rr.com>
	* WIP: Update

2006-02-02 Robin Cook <rcook@wyrms.net>
	* DETAILS: updated VERSION to 0.99-2006-01-27

2006-02-02 Robin Cook <rcook@wyrms.net>
	* DETAILS: updated VERSION to 0.99-2006-01-27
	  converted SOURCEHASH to SOURCE_GPG

2005-12-01 Seth Woolley <seth@tautology.org>
	* DETAILS: MD5 -> SHA512

2005-10-02 David C. Haley <dhaley@hot.rr.com>
	* DETAILS: pointed SOURCE_URL back to teh http snapshot of teh CVS files.
	  (had problems using the CVS in getting it to work properly)
	* DEPENDS: removed perl, GLUT, openal
	  added freetype2, ode, cal3d, lib3ds, mikmod, cegui
	* WIP: Updated

2005-10-02 David C. Haley <dhaley@hot.rr.com>
	* DETAILS: changed cvs version 0.99 -> cvs
	  added DISTCC_HOSTS=; CCACHE=on; FORCE_DOWNLOAD=1 (cvs); SOURCE_IGNORE=volatile (cvs)
	  updated the cvs source url to point to sourceforge cvs repo
	  bumped stable version from 0.98r004 -> 0.99r2005-09-03
	* WIP: Created

2005-04-06 David C. Haley <dhaley@hot.rr.com>
	* crystalspace.sh: update variable names

2005-03-31 David C. Haley <dhaley@hot.rr.com>
	* DETAILS: Updated md5 field

2005-03-14 David C. Haley <dhaley@hot.rr.com>
	* PREPARE: Created
	  Asks about CVS daily snapshot
	* DETAILS: stable version bump 0.98r003 -> 0.98r004
	  Removed Maintainer field
	  Modified to handle CVS or stable
	* BUILD: Removed old code refered to @ 2004-07-20
	* crystalspace.sh: Created
	* INSTALL: Created