@@ -1,3 +1,0 @@
-jam install							&&
-cp ${SCRIPT_DIRECTORY}/${SPELL}.sh $INSTALL_ROOT/etc/profile.d 	&&
-ln -sf $TRACK_ROOT/etc/crystalspace/vfs.cfg /usr/lib/crystalspace/vfs.cfg
