@@ -1,20 +1,0 @@
-2006-04-10 David C. Haley <dhaley@hot.rr.com>
-	Long overdue update. Given that planeshift (the reason for working on the below items) is no longer offering a 
-	source based release at the time of this writing the work on this spell has changed just slightly. Instead of 
-	working on getting this spell to work nicely with CEL and planeshift. This spell will not be revamp slightly so 
-	that it downloads, installs, and runs independantly. There will be no special attention given to this program 
-	with regards to getting it wo work with CEL or with Planeshift.
-	
-	This may change at a later time should Planeshift again be released as a source download but for the current 
-	moment this will be the path that the spell now takes. (unless someone wishes it to be otherwise :D ).
-
-2005-10-01 David C. HAley <dhaley@hot.rr.com>
-	Just a bit of a marker really. I am doing updating to the spell to try and get it updated and make finally ckecks to insure that it is installed 
-	correctly so that CEL, and hopefully planeshift will be able to cast without any problems in the future.
-
-2005-10-02 David C. Haley <dhaley@hot.rr.com>
-	I looked inot the crystalspace engine today. It seems that pulling files directly from teh CVS repo caused more problems than it solved. Because 
-ofthat I am reverting the change made to the DETAILS file in regards to teh SOURCE_URL and setting it back to teh way that it was. Also, in looking at 
-the online documentation the DEPENDS file needed to be updated. Three programs where removed, and six were added. These files have been noted in teh 
-HISTORY filein more detail, please view that file for more details. I will be updating the devel grimoire on p4 shortly and will continue to test the 
-spell locally on my machine. When I am confident that all teh bugs have been worked out that I can find I will remove this WIP.
