@@ -1,3 +1,7 @@
+2007-04-26 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* PRE_SUB_DEPENDS: added
+	* SUB_DEPENDS: added
+
 2007-04-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* BUILD: revamped
 	* DEPENDS: revamped
@@ -6,8 +10,6 @@
 	* PREPARE: removed
 	* WIP: removed
 	* crystalspace.sh: removed
-	* cs-pseudo-stable-2005-09-03.tar.bz2.sig: removed
-	* cs-pseudo-stable-2006-01-27.tar.bz2.sig: removed
 
 2006-10-26 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* INSTALL: use TRACK_ROOT when linking #9163
